// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Channel Component renders without crashing 1`] = `
<div
  className="Channel"
>
  <h2 />
</div>
`;

exports[`Channel Component shows an error, when error state in store is active 1`] = `
<div
  className="alert alert-danger"
>
  error while loading channel
</div>
`;

exports[`Channel Component shows channel title from store 1`] = `
<div
  className="Channel"
>
  <h2>
    Fernsehprogramm: Pro-Sieben
  </h2>
</div>
`;

exports[`Channel Component shows channel-items from store 1`] = `
<div
  className="Channel"
>
  <h2 />
  <div
    id="AAA-BBB-CCC-DDD"
  >
    ChannelItemContainer
  </div>
  <div
    id="BBB-CCC-DDD-EEE"
  >
    ChannelItemContainer
  </div>
  <div
    id="CCC-DDD-EEE-FFF"
  >
    ChannelItemContainer
  </div>
</div>
`;

exports[`Channel Component shows loading animation, when loading state in store is active 1`] = `
<div
  className="alert alert-info"
>
  Loading channel...
  <div
    className="fa fa-spin fa-spinner"
  >
     
  </div>
</div>
`;
